[package]
name = "gw_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
gw_core = { path = "../gw_core" }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
rstest = "0.24.0"
serde_test = "1.0.177"
