[package]
name = "gw_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
dotenvy = "0.15.7"
# eval-macro = "0.5.0"
gw_core = { path = "../gw_core" }
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validify = "2.0.0"

[dev-dependencies]
axum-test = "17.2.0"
pretty_assertions = "1.4.1"
rstest = "0.24.0"
serde_test = "1.0.177"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
wiremock = "0.6.3"
